--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       sizes="32x32"
       href="assets/img/favicon-32x32.png"
     />
-    <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -41,7 +40,17 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">
-                  Заголовок модального окна
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="184"
+                    height="28"
+                    fill="none"
+                  >
+                    <path
+                      fill="#3B5998"
+                      d="M21.218 0H6.782A6.783 6.783 0 0 0 0 6.782v14.436A6.783 6.783 0 0 0 6.782 28h14.436A6.783 6.783 0 0 0 28 21.218V6.782A6.783 6.783 0 0 0 21.218 0ZM19.68 10.318c-1.206.042-1.83.416-2.122 1.581-.416 1.83-.915 3.661-1.331 5.7-.707 3.287-2.58 5.159-6.699 5.783-.457.083-2.038.333-2.413.333 2.08-1.248 3.12-3.162 3.703-5.409.458-1.83.915-3.703 1.415-5.533.5-1.997.291-2.33-1.83-2.413-.167 0-.334-.042-.708-.084 2.247-2.08 4.368-3.994 6.532-5.95 1.58 1.998 3.079 3.912 4.701 5.95-.624 0-.957.042-1.248.042ZM39.333 21.722l7.738-10.366v10.366h3.455V6.255h-3.553l-7.518 9.994V6.255H36v15.467h3.333ZM68.324 21.722V6.255h-3.48v6.075H57.18V6.255h-3.455v15.467h3.455v-6.493h7.665v6.493h3.479ZM82.033 21.722v-1.554c4.915-.394 7.835-2.597 7.835-6.168s-2.92-5.75-7.835-6.168V6.255h-3.455v1.577c-4.915.417-7.834 2.62-7.834 6.168 0 3.571 2.92 5.774 7.834 6.168v1.554h3.455ZM86.34 14c0 1.762-1.509 2.922-4.307 3.223v-6.446c2.798.324 4.307 1.46 4.307 3.223Zm-12.044 0c0-1.74 1.484-2.899 4.282-3.223v6.446c-2.798-.324-4.282-1.46-4.282-3.223ZM100.025 22c4.915 0 8.492-3.34 8.492-8s-3.577-8-8.492-8c-4.89 0-8.467 3.34-8.467 8s3.577 8 8.467 8Zm0-2.922c-2.993 0-4.915-2.203-4.915-5.078 0-2.899 1.922-5.078 4.915-5.078 2.993 0 4.939 2.18 4.939 5.078 0 2.875-1.946 5.078-4.939 5.078ZM118.8 22c3.577 0 5.62-1.878 6.788-3.803l-2.968-1.368c-.681 1.275-2.141 2.25-3.82 2.25-2.944 0-5.085-2.157-5.085-5.079 0-2.922 2.141-5.078 5.085-5.078 1.679 0 3.139.997 3.82 2.249l2.968-1.391C124.445 7.855 122.377 6 118.8 6c-4.866 0-8.637 3.246-8.637 8s3.771 8 8.637 8ZM134.871 21.722V9.154h4.72V6.255h-12.944v2.899h4.745v12.568h3.479ZM155.372 21.722l-6.253-15.467h-4.331l-6.277 15.467h3.941l1.022-2.62h6.959l.997 2.62h3.942Zm-5.888-5.52h-5.061l2.53-6.654 2.531 6.655ZM160.325 21.722v-5.496h4.137c3.503 0 5.45-2.296 5.45-4.985 0-2.713-1.922-4.986-5.45-4.986h-7.592v15.467h3.455Zm3.674-8.395h-3.674V9.155h3.674c1.363 0 2.385.788 2.385 2.087 0 1.275-1.022 2.087-2.385 2.087ZM179.28 21.722V9.154H184V6.255h-12.944v2.899h4.744v12.568h3.48Z"
+                    />
+                  </svg>
                 </h1>
                 <button
                   type="button"
@@ -2468,29 +2477,18 @@
               </a>
             </li>
             <li class="item-dropdown item-dropdown-close">
-              <a class="dropdown-item-icon" href="#"
-                ><svg
+              <a class="dropdown-item-icon" href="#"></a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
                   viewBox="0 0 32 32"
                   fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
                 >
+                  <circle cx="16" cy="16" r="16" fill="#7DA6FC" />
                   <path
-                    d="M16 0C7.16337 0 0 7.16337 0 16C0 24.8366 7.16337 32 16 32C24.8366 32 32 24.8366 32 16C32 7.16337 24.8366 0 16 0Z"
-                    fill="#40B3E0"
-                  />
-                  <path
-                    d="M23.7853 9.20374L20.9274 23.6124C20.9274 23.6124 20.5278 24.6116 19.4287 24.132L12.8339 19.076L10.4359 17.917L6.39919 16.558C6.39919 16.558 5.77969 16.3382 5.71969 15.8586C5.65969 15.379 6.41919 15.1192 6.41919 15.1192L22.4662 8.82424C22.4662 8.82424 23.7852 8.24474 23.7852 9.20399"
+                    d="M15.9999 6.40002C10.7007 6.40002 6.3999 10.7008 6.3999 16C6.3999 21.2992 10.7007 25.6 15.9999 25.6H20.7999V23.68H15.9999C11.8335 23.68 8.3199 20.1664 8.3199 16C8.3199 11.8336 11.8335 8.32002 15.9999 8.32002C20.1663 8.32002 23.6799 11.8336 23.6799 16V17.3728C23.6799 18.1312 22.9983 18.88 22.2399 18.88C21.4815 18.88 20.7999 18.1312 20.7999 17.3728V16C20.7999 13.3504 18.6495 11.2 15.9999 11.2C13.3503 11.2 11.1999 13.3504 11.1999 16C11.1999 18.6496 13.3503 20.8 15.9999 20.8C17.3247 20.8 18.5343 20.2624 19.3983 19.3888C20.0223 20.2432 21.0975 20.8 22.2399 20.8C24.1311 20.8 25.5999 19.264 25.5999 17.3728V16C25.5999 10.7008 21.2991 6.40002 15.9999 6.40002ZM15.9999 18.88C14.4063 18.88 13.1199 17.5936 13.1199 16C13.1199 14.4064 14.4063 13.12 15.9999 13.12C17.5935 13.12 18.8799 14.4064 18.8799 16C18.8799 17.5936 17.5935 18.88 15.9999 18.88Z"
                     fill="white"
-                  />
-                  <path
-                    d="M12.3273 23.4505C12.3273 23.4505 12.1348 23.4325 11.8948 22.673C11.6552 21.9136 10.436 17.9168 10.436 17.9168L20.1283 11.7618C20.1283 11.7618 20.6879 11.4221 20.6679 11.7618C20.6679 11.7618 20.7678 11.8218 20.4679 12.1016C20.1683 12.3815 12.8542 18.9561 12.8542 18.9561"
-                    fill="#D2E5F1"
-                  />
-                  <path
-                    d="M15.3628 21.0143L12.7544 23.3926C12.7544 23.3926 12.5504 23.5473 12.3274 23.4503L12.8269 19.0328"
-                    fill="#B5CFE4"
                   />
                 </svg>
               </a>
@@ -2532,7 +2530,7 @@
                   /></svg
               ></a>
             </li>
-            <li class="item-dropdown item-dropdown-close">
+            <!-- <li class="item-dropdown item-dropdown-close">
               <a class="dropdown-item-icon" href="#"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -2551,7 +2549,7 @@
                     d="M21.293 15.139V14.03h-2.54l3.648-3.648-.784-.783-3.648 3.648v-2.54h-1.107v4.43h4.43Z"
                   /></svg
               ></a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </footer>
