--- a/index.html
+++ b/index.html
@@ -2477,7 +2477,7 @@
               </a>
             </li>
             <li class="item-dropdown item-dropdown-close">
-              <a class="dropdown-item-icon" href="#"></a>
+              <a class="dropdown-item-icon" href="#">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
@@ -2530,28 +2530,17 @@
                   /></svg
               ></a>
             </li>
-            <!-- <li class="item-dropdown item-dropdown-close">
-              <a class="dropdown-item-icon" href="#"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="40"
-                  height="40"
-                  fill="none"
-                  viewBox="0 0 32 32"
-                >
-                  <circle cx="16" cy="16" r="16" fill="#3DD" />
-                  <path
-                    fill="#fff"
-                    d="m17.6 19.837 1.24-1.24a1.2 1.2 0 0 1 1.295-.267l1.511.605a1.2 1.2 0 0 1 .755 1.115v2.748a1.201 1.201 0 0 1-1.265 1.201c-10.592-.66-12.731-9.63-13.128-13.065A1.198 1.198 0 0 1 9.2 9.6h2.7a1.2 1.2 0 0 1 1.114.754l.605 1.511a1.2 1.2 0 0 1-.266 1.295l-1.24 1.24s.687 4.837 5.487 5.437Z"
-                  />
-                  <path
-                    fill="#fff"
-                    d="M21.293 15.139V14.03h-2.54l3.648-3.648-.784-.783-3.648 3.648v-2.54h-1.107v4.43h4.43Z"
-                  /></svg
-              ></a>
-            </li> -->
           </ul>
         </div>
+
+        <!-- <div class="weather-widget text-center">
+          <h2>Погода</h2>
+          <div class="weather-info">
+            <div class="location">Санкт-Петербург</div>
+            <div class="temperature">2°С</div>
+            <div class="condition">Пасмурно</div>
+          </div>
+        </div> -->
       </footer>
     </div>
 
