--- a/index.html
+++ b/index.html
@@ -2533,14 +2533,14 @@
           </ul>
         </div>
 
-        <!-- <div class="weather-widget text-center">
+        <div class="weather-widget text-center">
           <h2>Погода</h2>
           <div class="weather-info">
             <div class="location">Санкт-Петербург</div>
             <div class="temperature">2°С</div>
             <div class="condition">Пасмурно</div>
           </div>
-        </div> -->
+        </div>
       </footer>
     </div>
 
